# test_sa_project

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: main.yaml
backend/: manage.py
backend/details/: admin.py  exceptions.py  models.py  serializers.py  services.py  urls.py  views.py
backend/details/fixtures/: details.json
backend/details/migrations/: 0001_initial.py  0002_alter_detailinstock_options_and_more.py  0003_rename_planed_quantity_planneddetail_planned_quantity.py
backend/details/tests/: factories.py  test_details_api.py  tests_planned_detail_allocation.py
backend/sa_project/: asgi.py  urls.py  wsgi.py
backend/sa_project/services/: base_dao.py  base_permission.py  base_view.py  helpers.py
backend/sa_project/settings/: __init__.py
backend/sa_project/settings/components/: _apps.py  _base.py  _database.py  _logging.py  _middleware.py  _path.py  _rest.py  _templates.py
backend/tasks/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/tasks/fixtures/: tasks.json
backend/tasks/management/commands/: allocate_details_between_tasks.py
backend/tasks/migrations/: 0001_initial.py  0002_alter_task_options.py
backend/tasks/tests/: factories.py  test_task_api.py  test_task_dao.py  tests_task_allocation.py
